# hallucinot

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
frontend/: app.js  config.js  index.html  privacy.html  styles.css  terms.html
hallucinot/: __init__.py  config.py  document_loader.py  extraction.py  models.py  verification.py
static/: styles.css
templates/: index.html
